# keera-posture

./: .gitignore  .travis.yml  CHANGELOG  LICENSE  README  README.md  Setup.hs  TRANSLATIONS  installation.sh  keera-posture.cabal  metrics.sh  sources.txt
data/: Interface.glade  icon-bad-posture.xcf  icon-good-posture.xcf  icon-unknown-posture.xcf
debian/: control-any-amd64  control-i386  create-package.sh  debian-deps.sh  keera-posture.desktop  package-from-scratch.sh
debian-data/: README  control-any-amd64  keera-posture.1
debian-data/doc/: copyright
po/: es.po  gl.po
src/: Audio.hs  CombinedEnvironment.hs  Controller.hs  Gettext.hs  Language.hs  MyIO.hs  Paths.hs  View.hs
src/AI/CV/: PostureProcessors.hs
src/Controller/: Conditions.hs
src/Controller/Conditions/: Calibrate.hs  Calibration.hs  Config.hs  Detector.hs  Help.hs  LanguageConfig.hs  MenuEnabled.hs  MenuEnabledClick.hs  NotificationMenu.hs  NotifySound.hs  NotifyWindow.hs  PopupMenu.hs  Postcalibration.hs  Precalibration.hs  PreferencesDetectionCamera.hs  PreferencesDetectionCorrection.hs  PreferencesDetectionDelay.hs  PreferencesDetectionMethods.hs  PreferencesDialog.hs  PreferencesDialogDestroy.hs  PreferencesLanguageCombo.hs  PreferencesSoundCustomise.hs  PreferencesUplink.hs  Quit.hs  Status.hs  UpdateCheck.hs  Website.hs  Welcome.hs
src/Data/Extra/: Ord.hs
src/Data/String/: Extra.hs
src/Graphics/UI/Gtk/: Reactive.hs
src/Graphics/UI/Gtk/Helpers/: Combo.hs  FileDialog.hs  MenuItem.hs  MessageDialog.hs
src/Graphics/UI/Simplify/: Basic.hs  EntryBasic.hs  Reactive.hs
src/I18N/: Strings.hs
src/Model/: Model.hs  ProtectedModel.hs  ReactiveModel.hs
src/Model/ProtectedModel/: Detector.hs  Initialisation.hs  Preferences.hs  Reactive.hs  Sound.hs  Status.hs
src/Model/ReactiveModel/: Detector.hs  Initialisation.hs  ModelEvents.hs  Preferences.hs  Sound.hs  Status.hs
src/Paths/: CustomPaths.hs
src/View/: InitLanguagesCombo.hs  Objects.hs
src/View/MainWindow/: InitLanguagesCombo.hs  ObjectList  Objects.hs
